# Python_Projects

./: README.md
01-Hangman/: pyproject.toml
01-Hangman/01_hangman/: hangman_words.py  main.py
02-Caeser-Cypher/: pyproject.toml
02-Caeser-Cypher/02_caeser_cypher/: main.py
03-Silent-Bid/: README.md  pyproject.toml
03-Silent-Bid/03_silent_bid/: main.py
04-Cofee-Machine/: pyproject.toml
04-Cofee-Machine/04_cofee_machine/: main.py  menu.py  money_machine.py
05-Quiz-Game/: pyproject.toml
05-Quiz-Game/05_quiz_game/: main.py  question_model.py  quiz_brain.py
06-Tutle-GUI/: pyproject.toml
06-Tutle-GUI/06_tutle_gui/: main.py
