[tool.poetry]
name = "02-caeser-cypher"
version = "0.1.0"
description = ""
authors = ["RishabhChaudhary <rishabh.vijay01@gmail.com>"]
readme = "README.md"
packages = [{include = "02_caeser_cypher"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
