[tool.poetry]
name = "03-silent-bid"
version = "0.1.0"
description = ""
authors = ["RishabhChaudhary <rishabh.vijay01@gmail.com>"]
readme = "README.md"
packages = [{include = "03_silent_bid"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
